--- a/src/components/ProductsTable/ProductsTable.css
+++ b/src/components/ProductsTable/ProductsTable.css
@@ -30,3 +30,22 @@
     margin-right: 20px;
     cursor: pointer;
 }
+
+/*edit modals child style*/
+.edit-products-form-group{
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+    column-gap: 15px;
+    background-color: #f4f4f4;
+    padding: 0 20px;
+    border-radius: 10px;
+}
+.edit-product-input{
+    outline: none;
+    border: none;
+    background-color: unset;
+    font-size: 1.1rem;
+    width: 100%;
+    padding: 8px 10px;
+}
