--- a/frontend/src/components/AddNewProducts/AddNewProducts.css
+++ b/frontend/src/components/AddNewProducts/AddNewProducts.css
@@ -42,6 +42,7 @@
     border-radius: 15px;
     font-size: 1rem;
     margin-top: 10px;
+    cursor: pointer;
 }
 .products-input-icon{
     width: 20px;
