--- a/frontend/src/cms.css
+++ b/frontend/src/cms.css
@@ -18,11 +18,20 @@
     visibility: visible;
     opacity: 1;
 }
+.cms-main{
+    margin-top: 60px;
+    border-radius: 25px;
+    padding: 20px;
+
+}
 .cms-table{
+    width: 100%;
+    margin-top: 20px;
     background-color: var(--white);
     text-align: center;
     border-radius: 20px;
 }
+
 .cms-table th ,.cms-table td{
     padding: 20px;
 }
@@ -30,4 +39,13 @@
     position: absolute;
     padding: 5px;
     cursor: pointer;
+}
+.cms-table button{
+    background-color: var(--blue);
+    color: var(--white);
+    border-radius: 10px;
+    padding: 8px 15px;
+    cursor: pointer;
+    border: none;
+    outline: none;
 }
