--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -15,23 +15,23 @@
     margin-top: 20px;
 }
 
-.sidebar-links li{
+.sidebar-links a{
     position: relative;
     padding: 15px;
 }
-.sidebar-links li a{
-    width: 100%;
+.sidebar-links a{
     color: var(--white);
     text-decoration: none;
     display: flex;
     justify-content: right;
     align-items: center;
     font-size: 1.2rem;
+
 }
-.sidebar-links li.active{
+.sidebar-links a.active{
     background-color: #391588;
 }
-.sidebar-links li:first-child{
+.sidebar-links a:first-child{
     margin-bottom: 20px;
 }
 .icon{
